my-ns.yaml
apiVersion: v1
kind: Namespace
metadata: 
  name: my-ns 
  labels: 
    teamname: testing
