multicontainerpod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: testpod
  labels:
    app: my-pod
  namespace: my-ns
spec:
  containers:
    - name: my-nginx
      image: nginx
      ports:
        - containerPort: 8080
    - name: my-httpd
      image: httpd
      ports:
        - containerPort: 80
