pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod
  labels:
    app: my-pod
  namespace: my-ns
spec:
  containers:
    - name: my-nginx
      image: nginx
      ports:
        - containerPort: 80
