service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginxsvc
  namespace: my-ns 
spec:
  selector:
    app: my-app
  type: NodePort
  ports:
  - name: http
    port: 80 # service port
    targetPort: 8080 # Container port
